fix: add color-scheme for date and time inputs to support dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -135,6 +135,9 @@ body {
         appearance:none;
    }
 
+     #datePublished, #timePublished {
+        color-scheme: dark;
+     }
     .btn {
         display: inline-flex;
         align-items: center;
